--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "highcharts": "^12.2.0",
+    "highcharts-react-official": "^3.2.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.1",
+    "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
