--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/x-charts": "^8.4.0",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
@@ -21,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
